--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -8,12 +8,12 @@ wid = params[:wid] if params[:wid]
 <div class="list-group">
   <div class="list-group-item">
     Transaction
-    | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/#{wid}" : "/wallets/#{wid}" %>">
+    | <small><a href="<%= back_to_wallet(url_path, wid) %>">
         go back to wallet
       </a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <div class="form-group">
         <label for="wid_src">Source Wallet</label>
         <select class="form-control" name="wid_src" id="wid_src">
