--- a/views/form_wallet_update.erb
+++ b/views/form_wallet_update.erb
@@ -6,10 +6,10 @@ wid = wal['id']
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wid %>">go back to wallet</a></small>
+    <small><a href="<%= back_to_wallet(url_path, wid) %>">go back to wallet</a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <div class="form-group">
         <label for="epoch_number">Wallet Name</label>
         <input type="text" class="form-control" name="name" id="name"
