--- a/views/transactions.erb
+++ b/views/transactions.erb
@@ -2,6 +2,7 @@
   url_path = request.env['PATH_INFO'].to_s
   byron_ep = "/byron-wallets"
   shelley_ep = "/wallets"
+  wid = params[:wid]
 %>
 <div class="list-group">
   <div class="list-group-item">
