--- a/views/utxo_details.erb
+++ b/views/utxo_details.erb
@@ -11,7 +11,7 @@
 <div class="list-group">
     <div class="list-group-item">
     UTxO distribution
-    | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/<%= wal['id'] %>">go back to wallet</a></small>
+    | <small><a href="<%= back_to_wallet(url_path, wid) %>">go back to wallet</a></small>
     </div>
     <div class="list-group-item">
         <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>-utxo" method="GET">
