--- a/views/form_byron_wallet_address_import.erb
+++ b/views/form_byron_wallet_address_import.erb
@@ -4,7 +4,7 @@ ep = "/byron-wallets/#{wid}/address-import"
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wid %>">go back to wallet</a></small>
+    <small><a href="<%= back_to_wallet(url_path, wid) %>">go back to wallet</a></small>
   </div>
 
   <div class="list-group-item">
