--- a/views/form_coin_selection.erb
+++ b/views/form_coin_selection.erb
@@ -1,18 +1,18 @@
 <%
   url_path = request.env['PATH_INFO'].to_s
   wid = params[:wid] if params[:wid]
-  byron_ep = "/byron-wallets"
-  shelley_ep = "/wallets"
+  byron_ep = "/byron-wallets/coin-selection/random"
+  shelley_ep = "/wallets/coin-selection/random"
 %>
 <div class="list-group">
   <div class="list-group-item">
      Coin Selection - random
-     | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/<%= wid %>">
+     | <small><a href="<%= back_to_wallet(url_path, wid) %>">
              go back to wallet
            </a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/coin-selection/random" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <div class="form-group">
         <label for="wid">Source Wallet</label>
         <select class="form-control" name="wid" id="wid">
