--- a/views/form_del_all.erb
+++ b/views/form_del_all.erb
@@ -6,7 +6,7 @@
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : ((url_path.include? "shared") ? shared_ep : shelley_ep) %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, shared_ep) %>" method="POST">
       <button type="submit" class="btn btn-danger">
         Delete all <%= (url_path.include? "byron") ? "Byron" : ((url_path.include? "shared") ? "Shared" : "Shelley") %> wallets?
       </button>
