--- a/views/form_get_policy_key.erb
+++ b/views/form_get_policy_key.erb
@@ -6,12 +6,12 @@
 <div class="list-group">
   <div class="list-group-item">
      Get policy key
-     | <small><a href="<%= url_path.include?('shared')? "/shared-wallets/" : "/wallets/" %><%= wid %>">
+     | <small><a href="<%= back_to_wallet(url_path, wid) %>">
              go back to wallet
            </a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= url_path.include?('shared')? shared_ep : shelley_ep %>"
+    <form action="<%= pick_post_ep(url_path, nil, shelley_ep, shared_ep) %>"
           method="POST">
       <div class="form-group">
         <label for="wid">Wallet</label>
