--- a/views/form_migrate.erb
+++ b/views/form_migrate.erb
@@ -1,7 +1,7 @@
 <%
   url_path = request.env['PATH_INFO'].to_s
-  byron_ep = "/byron-wallets"
-  shelley_ep = "/wallets"
+  byron_ep = "/byron-wallets-migrate"
+  shelley_ep = "/wallets-migrate"
 
   wid = params[:wid] if params[:wid]
 %>
@@ -9,12 +9,12 @@
 <div class="list-group">
   <div class="list-group-item">
     Migration
-    | <small><a href="<%= (url_path.include? "byron") ? "#{byron_ep}/#{wid}" : "#{shelley_ep}/#{wid}" %>">
+    | <small><a href="<%= back_to_wallet(url_path, wid) %>">
         go back to wallet
       </a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? "#{byron_ep}-migrate" : "#{shelley_ep}-migrate" %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <div class="form-group">
         <label for="wid_src">Source Wallet</label>
         <select class="form-control" name="wid_src" id="wid_src">
