--- a/views/form_tx_new_sign.erb
+++ b/views/form_tx_new_sign.erb
@@ -24,7 +24,7 @@ function goBack() {
       <br/>
       <br/>
     <% end %>
-    <form action="<%= url_path.include?('shelley') ? shelley_ep : byron_ep %>"
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>"
         method="POST">
       <div class="form-group">
         <label for="pass">Passphrase</label>
