--- a/views/form_tx_new_submit.erb
+++ b/views/form_tx_new_submit.erb
@@ -24,7 +24,7 @@ function goBack() {
       <br/>
       <br/>
     <% end %>
-    <form action="<%= url_path.include?('shelley') ? shelley_ep : byron_ep %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <input type="hidden" name="wid" value="<%= wid %>"/>
       <input type="hidden" name="transaction" value="<%= tx['transaction'] %>"/>
       <button type="submit" class="btn btn-success">Submit</button>
