--- a/views/form_tx_new_submit_standalone.erb
+++ b/views/form_tx_new_submit_standalone.erb
@@ -9,12 +9,12 @@ wid = params[:wid] if params[:wid]
   <div class="list-group-item">
      Submit Serialized Transaction 🚀
      | <small>
-       <a href="<%= url_path.include?('shelley') ? "/wallets/#{wid}" : "/byron-wallets/#{wid}" %>">
+       <a href="<%= back_to_wallet(url_path, wid) %>">
          go back to wallet
        </a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include?('shelley')) ? shelley_ep : byron_ep %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
       <div class="form-group">
         <label for="wid">Source Wallet</label>
         <select class="form-control" name="wid" id="wid">
