--- a/views/form_wallet_update_pass_mnem.erb
+++ b/views/form_wallet_update_pass_mnem.erb
@@ -7,12 +7,13 @@ wid = wal['id']
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets/" : "/wallets/" %><%= wid %>">go back to wallet</a></small>
+    <small><a href="<%= back_to_wallet(url_path, wid) %>">
+      go back to wallet</a></small>
   </div>
   <div class="list-group-item">
-    <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>-mnem" method="POST">
+    <form action="<%= pick_post_ep(url_path, "#{byron_ep}-mnem", "#{shelley_ep}-mnem", nil) %>" method="POST">
       <div class="form-group">
-        <label for="mnemonic_sentence"><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>">Old pass</a> / Wallet mnemonics</label>
+        <label for="mnemonic_sentence"><a href="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>">Old pass</a> / Wallet mnemonics</label>
         <input type="text" class="form-control" name="mnemonic_sentence" id="mnemonic_sentence"
             placeholder="Mnemonic sentence" value="">
         <label for="new_pass">New pass</label>
