--- a/views/show_migrated.erb
+++ b/views/show_migrated.erb
@@ -8,8 +8,8 @@ url_path = request.env['PATH_INFO'].to_s
 
 <div class="list-group">
   <div class="list-group-item">
-     <small><a href="<%= back_to_wallet(url_path, wid) %>">
-       go back to <%= (url_path.include? "byron") ? "Byron" : "Shelley" %> Wallet
+     <small><a href="<%= back_to_wallet(url_path, wid_src) %>">
+       go back to wallet
      </a></small>
   </div>
 </div>
