--- a/views/show_migration_plan.erb
+++ b/views/show_migration_plan.erb
@@ -7,7 +7,7 @@
 
 <div class="list-group">
   <div class="list-group-item">
-     Migration fee
+     Migration plan
      | <small><a href="<%= back_to_wallet(url_path, wid) %>">go back to wallet</a></small>
   </div>
   <div class="list-group-item">
