--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -278,8 +278,8 @@
            </small><br/>
            <% end %>
            <small><%= generate_curl(wal, "Wallet curl") %></small>
-           <small><%= generate_curl(addresses, "Addresses curl") if txs %></small>
-           <small><%= generate_curl(txs, "Transactions curl") if addresses %></small>
+           <small><%= generate_curl(addresses, "Addresses curl") if addresses %></small>
+           <small><%= generate_curl(txs, "Transactions curl") if txs %></small>
        </div>
        <div class="col displ_details" style="display:none" id="addr">
          <div class="list-group-item">
