add shared wallets decode

--- a/views/shared_wallet.erb
+++ b/views/shared_wallet.erb
@@ -42,9 +42,11 @@
                  <a class="dropdown-item <%= "disabled" if status == "incomplete" %>" href="/construct-tx-shared?wid=<%= id %>">
                    Construct 🛠
                   </a>
-
+                  <a class="dropdown-item" href="/decode-tx-shared?wid=<%= id %>">
+                    Decode 👀
+                  </a>
                <!-- <a class="dropdown-item" href="/balance-tx-shared?wid=<%= id %>">Balance ⚖️</a>
-               <a class="dropdown-item" href="/decode-tx-shared?wid=<%= id %>">Decode 👀</a>
+
                <a class="dropdown-item" href="/submit-tx-standalone-shared?wid=<%= id %>">Submit 🚀</a> -->
              </div>
            </div>
