support for Block latest header

--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -56,6 +56,8 @@
       <a class="dropdown-item" href="/network-params">Network Parameters</a>
       <a class="dropdown-item" href="/network-clock">Network Clock</a>
       <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="/block-header">Block Latest Header</a>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/inspect-address">Inspect Address</a>
       <a class="dropdown-item" href="/construct-address">Construct Address</a>
       <div class="dropdown-divider"></div>
