--- a/views/form_tx_new_submit.erb
+++ b/views/form_tx_new_submit.erb
@@ -2,7 +2,7 @@
   # wallets = wallets
   url_path = request.env['PATH_INFO'].to_s
   shelley_ep = "/submit-tx-shelley"
-  byron_ep = "/submit-tx-byron"
+  shared_ep = "/submit-tx-shared"
   wid = params[:wid] if params[:wid]
 %>
 
@@ -24,7 +24,7 @@ function goBack() {
       <br/>
       <br/>
     <% end %>
-    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, nil) %>" method="POST">
+    <form action="<%= pick_post_ep(url_path, nil, shelley_ep, shared_ep) %>" method="POST">
       <input type="hidden" name="wid" value="<%= wid %>"/>
       <input type="hidden" name="transaction" value="<%= tx['transaction'] %>"/>
       <button type="submit" class="btn btn-success">Submit</button>
