--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -43,7 +43,8 @@
                <a class="dropdown-item" href="/construct-tx-shelley?wid=<%= id %>">Construct 🛠️</a>
                <a class="dropdown-item" href="/balance-tx-shelley?wid=<%= id %>">Balance ⚖️</a>
                <a class="dropdown-item" href="/decode-tx-shelley?wid=<%= id %>">Decode 👀</a>
-               <a class="dropdown-item" href="/submit-tx-standalone-shelley?wid=<%= id %>">Submit 🚀</a>
+               <a class="dropdown-item" href="/sign-tx-shelley?wid=<%= id %>">Sign ✍️</a>
+               <a class="dropdown-item" href="/submit-tx-shelley?wid=<%= id %>">Submit 🚀</a>
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To single address</a>
                <a class="dropdown-item" href="/tx-to-multi-address?wid=<%= id %>">To many addresses</a>
