--- a/views/transactions.erb
+++ b/views/transactions.erb
@@ -2,17 +2,18 @@
   url_path = request.env['PATH_INFO'].to_s
   byron_ep = "/byron-wallets"
   shelley_ep = "/wallets"
+  shared_ep = "/shared-wallets"
   wid = params[:wid]
 %>
 <div class="list-group">
   <div class="list-group-item">
      List transactions
-     | <small><a href="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>/<%= params[:wid] %>">
+     | <small><a href="<%= pick_post_ep(url_path, byron_ep, shelley_ep, shared_ep) %>/<%= params[:wid] %>">
              go back to wallet
            </a></small>
   </div>
   <div class="list-group-item">
-     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>-transactions" method="GET" >
+     <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, shared_ep) %>-transactions" method="GET" >
        <div class="form-row">
          <div class="form-group">
            <label for="wid">Wallet</label>
@@ -84,7 +85,7 @@
   </div>
   <div class="list-group-item">
     <% transactions.each do |tx|  %>
-    <%= render_tx_on_wallet_page( ((url_path.include? "byron") ? byron_ep : shelley_ep), tx, params[:wid]) %>
+    <%= render_tx_on_wallet_page(url_path, tx, params[:wid]) %>
     <% end %>
   </div>
 </div>
