list txs on shared wallets + include simple-metadata query param

--- a/views/shared_wallet.erb
+++ b/views/shared_wallet.erb
@@ -51,7 +51,7 @@
                   <a class="dropdown-item <%= "disabled" if status == "incomplete" %>" href="/submit-tx-shared?wid=<%= id %>">
                     Submit 🚀
                   </a>
-
+                    <a class="dropdown-item" href="/shared-wallets-transactions?wid=<%= id %>">List</a>
                <!-- <a class="dropdown-item" href="/balance-tx-shared?wid=<%= id %>">Balance ⚖️</a> -->
              </div>
            </div>
