Support for  utxo endpoints for shared wallets

--- a/views/shared_wallet.erb
+++ b/views/shared_wallet.erb
@@ -66,6 +66,8 @@
              </div>
            </div>
 
+           <a class="nav-link" href="/shared-wallets-utxo?wid=<%= wal['id'] %>">UTxO</a>
+
          </nav>
 
 
