--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -268,6 +268,10 @@
                 txs_out = txs.select{ |t| t['direction'] == "outgoing" }
             %>
            <small><b>Transactions:</b>  <br/>
+                  <% if txs.size >= @tx_max_count %>
+                  ℹ️ Displaying last <%= @tx_max_count %> transactions. 
+                  Go to <a href="<%= url_path.include?('byron') ? '/byron-' : '/' %>wallets-transactions?wid=<%= id %>" >list transactions</a> to examine more. <br/>
+                  <% end %>
                  &nbsp;&nbsp;<a href="#" onClick="showIt('txs')" >Total:</a> <span id="txs_total"><%= txs.size %></span> <br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;Status: <br/>
                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onClick="showIt('txs_pending')" >Pending:</a>  <span id="txs_pending_size"><%= txs_pending.size %></span> <br/>
